# OpenGLTest

./: CMakeLists.txt  Engine.cpp  Engine.h  OpenGLTest.cpp  OpenGLTest.h
Entities/: CMakeLists.txt  Entities.cpp  Entities.h  EntityComponents.h  Models.cpp  Models.h
Entities/Systems/: CMakeLists.txt  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
Entities/Systems/RenderSystems/: CMakeLists.txt  LightingSystem.cpp  LightingSystem.h
Resources/gltf/: minimal.json
Resources/models/firepit/: firepit.mtl  untitled.gltf
Resources/models/trees/: scene.gltf  tree.mtl
Resources/shaders/: coloured.frag  coloured.vert  textured.frag  textured.vert
Resources/textures/: run.py
Utilities/: CMakeLists.txt  Camera.h  Pipeline.cpp  Pipeline.h  Utilites.cpp  Utilities.h
